@@ -139,9 +139,8 @@ db.nosql.deleteEmptyDirsAtStartup=true
 #Size of in memory cache to hold a role's inheritance list, this represents the
 # maximum number of roles to keep in the cache at any given time
 cache.roles.size=1000
-#Size of in memory cache for Users, this represents the
-# maximum number of roles to keep in the cache at any given time
-cache.users.size=1000
+#Cache all users in memory for performance
+cache.users.enabled=true
 #Size of in memory cache to hold created Permissions, this represents the
 # maximum number of roles to keep in the cache at any given time
 cache.permission.size=1000
